--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dragonballz-clickygame",
+  "homepage": "http://dragonballz-clickygame.herokuapp.com/",
   "version": "0.1.0",
   "private": true,
   "engines": {
