attempt gh-page deploy

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dragonballz-clickygame",
-  "homepage": "http://dragonballz-clickygame.herokuapp.com/",
+  "homepage": "http://IrvgottiTheDon.github.io/dragonballz-clickygame",
   "version": "0.1.0",
   "private": true,
   "engines": {
@@ -15,7 +15,12 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
+  },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
