fix homepage in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dragonballz-clickygame",
-  "homepage": "http://IrvgottiTheDon.github.io/dragonballz-clickygame",
+  "homepage": "https://irvgottithedon.github.io/dragonballz-clickygame",
   "version": "0.1.0",
   "private": true,
   "engines": {
